// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MacroNoResults /> should display no macros available without search query 1`] = `
<div
  class="no-result-container"
>
  <p>
    <span>
      You don't have any macros yet
    </span>
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-medium-74a9"
    >
      add
    </i>
    <span
      class="ui-button-content-a432"
    >
      Create a new macro
    </span>
  </button>
</div>
`;

exports[`<MacroNoResults /> should display no macros found with search query 1`] = `
<div
  class="no-result-container"
>
  <p>
    <span>
      No macros found
    </span>
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-medium-74a9"
    >
      add
    </i>
    <span
      class="ui-button-content-a432"
    >
      Create a new macro
    </span>
  </button>
</div>
`;
